--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,16 @@
     --MAIN_COLOR: #0d2137;
 }
 
+#root{
+    width: 100%;
+    height: 825px;
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(9, 1fr);
+    /* gap: 1px; */
+}
+
 
 h1,
 h2,
@@ -137,10 +147,16 @@ body {
 }
 
 
+/* NAVBAR CSS */
+
 .navBar {
     padding: 0 5vw;
-    height: 5vw;
+    height: 100%;
     background-color: var(--MAIN_COLOR);
+    grid-column: span 5 / span 5;
+    position: sticky;
+    top: 0;
+    z-index: 2;
 
     .eProdLogo {
         height: 4vw;
@@ -150,6 +166,7 @@ body {
         border: none;
         color: var(--WHITE);
         cursor: pointer;
+        background-color: var(--MAIN_COLOR);
         font-size: 1vw;
 
         .addTocardimg {
@@ -164,17 +181,23 @@ body {
     }
 }
 
+
+/* FILTER BAR CSS */
+
 .filterbar {
-    width: 20vw;
-    height: 48.7vw;
+    width: 18vw;
+    height: 100%;
     background-color: rgb(24, 72, 114);
+    grid-row: span 8 / span 8;
+    grid-row-start: 2;
+    position: fixed;
+    top: 4vw;
+    bottom: 0;
 }
 
-/* Dropdown Base */
 .dropdown {
     cursor: pointer;
     padding: 15px;
-    /* border-radius: 8px; */
     transition: transform 0.3s ease-in-out, background-color 0.3s ease-in-out, height 0.3s ease-in-out;
 }
 
@@ -202,7 +225,7 @@ body {
     position: relative;
     padding-left: 1vw;
     width: 100%;
-    height: 13vw;
+    height: 10vw;
     align-items: flex-start;
     background-color: rgb(60, 78, 93);
     transition: height 0.3s ease-in-out, background-color 0.3s ease-in-out;
@@ -254,4 +277,34 @@ body {
 
 .fill-up .upArrow {
     display: block;
+}
+
+
+/* MAIN PAGE CSS */
+
+.div20 {
+
+    padding: 10px 20px 2px 20px;
+    grid-column: span 4 / span 4;
+    grid-row: span 8 / span 8;
+    grid-row-start: 2;
+    display: grid;
+    position: relative;
+    left: 19vw;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    gap: 8px;
+
+    height: 1000px;
+    overflow: hidden;
+    overflow-y: auto;
+
+    .insideDivs{
+        width: 100%;
+        height: 100%;
+        background-color: aqua;
+        grid-row: span 2 / span 2;
+        border-radius: 1.5vw;
+    }
+
 }
