--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,14 @@
     --MAIN_COLOR: #0d2137;
 }
 
-#root{
+#root {
     width: 100%;
     height: 825px;
     position: relative;
-    display: grid;
+    /* display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(9, 1fr);
-    /* gap: 1px; */
+    gap: 1px; */
 }
 
 
@@ -151,10 +151,11 @@ body {
 
 .navBar {
     padding: 0 5vw;
-    height: 100%;
+    height: 10%;
     background-color: var(--MAIN_COLOR);
-    grid-column: span 5 / span 5;
-    position: sticky;
+    /* grid-column: span 5 / span 5; */
+    position: fixed;
+    width: 100%;
     top: 0;
     z-index: 2;
 
@@ -184,15 +185,21 @@ body {
 
 /* FILTER BAR CSS */
 
+.filter-con {
+    height: 90.3%;
+    position: absolute;
+    top: 5.2vw;
+}
+
 .filterbar {
-    width: 18vw;
+    width: 20%;
     height: 100%;
     background-color: rgb(24, 72, 114);
     grid-row: span 8 / span 8;
     grid-row-start: 2;
-    position: fixed;
+    /* position: fixed;
     top: 4vw;
-    bottom: 0;
+    bottom: 0; */
 }
 
 .dropdown {
@@ -204,7 +211,7 @@ body {
 /* Closed State */
 .fill-down {
     display: flex;
-    position: relative;
+    /* position: relative; */
     padding-left: 1vw;
     width: 100%;
     height: 3vw;
@@ -239,7 +246,7 @@ body {
 }
 
 /* Arrow Styling */
-.downArrow, 
+.downArrow,
 .upArrow {
     width: 2vw;
     filter: invert(100%) brightness(1000%) contrast(100%);
@@ -254,15 +261,17 @@ body {
     display: none;
 }
 
-.fill-down .categoryCheckBox, .fill-down .categoryText{
-    display:none;
+.fill-down .categoryCheckBox,
+.fill-down .categoryText {
+    display: none;
 }
 
-.fill-up .categoryCheckBox, .fill-up .categoryText{
-    display:block;
+.fill-up .categoryCheckBox,
+.fill-up .categoryText {
+    display: block;
 }
 
-.categoryText{
+.categoryText {
     font-size: 1vw;
     color: white;
 }
@@ -282,29 +291,78 @@ body {
 
 /* MAIN PAGE CSS */
 
-.div20 {
+.container {
+    width: 80%;
+    height: 100%;
+    padding-right: 0;
+    background-color: aliceblue;
 
-    padding: 10px 20px 2px 20px;
-    grid-column: span 4 / span 4;
-    grid-row: span 8 / span 8;
-    grid-row-start: 2;
-    display: grid;
-    position: relative;
-    left: 19vw;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(4, 1fr);
-    gap: 8px;
-
-    height: 1000px;
-    overflow: hidden;
-    overflow-y: auto;
-
-    .insideDivs{
+    .subDivs {
         width: 100%;
         height: 100%;
-        background-color: aqua;
-        grid-row: span 2 / span 2;
-        border-radius: 1.5vw;
+        overflow: hidden;
+        overflow-y: auto;
+
+        .insideDivs {
+            border-radius: 1vw;
+            margin-top: 1vw;
+            width: 100%;
+            height: 40%;
+            background-color: #d3e2f1;
+            border: 1px solid rgb(213, 231, 235);
+
+            .imageDiv {
+                width: 30%;
+                height: 100%;
+                background-color: #fefefe;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border-top-left-radius: 1vw;
+                border-bottom-left-radius: 1vw;
+
+                .images {
+                    width: 45%;
+                    height: auto;
+                }
+            }
+            .prodectInfo {
+                width:55%;
+                max-height: 100%;
+                .Cat-C{
+                    .Cat-h, .Cat-t{
+                        color: #616161;
+                        font-size: 0.8vw;
+                    }
+                }
+                .prodDesc{
+                    font-size: 0.8vw;
+                    color: #616161;
+                }
+                .ratting{
+                    width: 18vw;
+                    .ratingStar{
+                        width: 3vw;
+                        padding: 0 3px;
+                        border-radius: 4px;
+                        height: 1.5vw;
+                        .imgStar{
+                            width: 1vw;
+                            height: 1vw;
+                        }
+                        .ratingTest{
+                            color: white;
+                        }
+                    }
+                    .reviewCount{
+
+                    }
+                }
+            }
+            .purchessDetails{
+                width:15% ;
+            }
+        }
     }
 
 }
