--- a/src/App.css
+++ b/src/App.css
@@ -366,3 +366,24 @@ body {
     }
 
 }
+
+.modelPopup-down{
+    width: 800px;
+    height: 600px;
+    background-color: rgb(0, 255, 234);
+    z-index: 22;
+    display: none;
+    position: absolute;
+    left: 26vw;
+    top: 10vw;
+}
+.modelPopup-open{
+    width: 800px;
+    height: 600px;
+    background-color: rgb(0, 255, 234);
+    z-index: 22;
+    display: block;
+    position: absolute;
+    left: 26vw;
+    top: 10vw;
+}
